src/test/deca/context/valid/provided/while_if.deca
// Description: tester if et while

//

//
// Historique:
//    cree le 01/01/2023

// ça marche

{
int x = 1 ;
while(x == 1){
x = x + 1 ;
if(false){
while(x == 2){
println("noo");
x = x + 1 ;
}
println("NOOOOOOOOON");
}
else if(x == 2){
println("ça");

}


}
println("marche");
}
