src/test/deca/context/invalid/provided/greater.deca
//Resultats :
//Erreur contextuelle
//Ligne 10: x Print only accepts strings, ints and floats
{
    boolean bool = 1>=2;
    if (bool){
        println("boooom");
    }
    else{
        println(1>2);
    }
}